<resources>
    <string name="app_name">mobdev</string>

    <string name="login_title">Вход</string>
    <string name="hint_login">Имя пользователя</string>
    <string name="hint_password">Пароль</string>
    <string name="action_login">Войти</string>
    <string name="login_register_hint">Нет аккаунта? Зарегистрируйтесь на faerytea.name/adduser.html</string>

    <string name="chats_title">Чаты</string>
    <string name="action_logout">Выйти</string>
    <string name="chats_empty">Каналы не найдены</string>

    <string name="action_back">Назад</string>
    <string name="hint_message">Сообщение</string>
    <string name="action_send">Отправить</string>
    <string name="select_chat">Выберите чат</string>

    <string name="action_close">Закрыть</string>
    <string name="action_ok">ОК</string>
    <string name="image_content_description">Изображение</string>

    <string name="error_invalid_credentials">Неверный логин / пароль</string>
    <string name="error_session_expired">Сессия истекла, войдите снова</string>
    <string name="error_network">Не удалось выполнить запрос. Проверьте соединение</string>
</resources>
